--- a/index.html
+++ b/index.html
@@ -114,24 +114,68 @@
       </div>
 
       <div class="slider">
-        <div class="1">
+        <div class="slider-area">
           <img src="images/illustration.jpg" alt="" />
           <p>Illustration</p>
         </div>
-        <div class="1">
+        <div class="slider-area">
           <img src="images/identity.jpg" alt="" />
           <p>Identity</p>
         </div>
-        <div class="1">
+
+        <div class="slider-area">
           <img src="images/graphic-design.jpg" alt="" />
           <p>Graphic Design</p>
         </div>
       </div>
     </div>
+    <div class="about">
+<div class="ab-main">
+  <p class="main-1">ABOUT</p>
+  <p class="main-2">lorem ipsum dolor sit amet consectetur</p>
+</div>
+<div class="ab p-1">
+  <div class="ab-cont-1">
+    <p>2009-2011</p>
+    <p>Our Humble Beginnings</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+  </div>
+
+<img src="images/1.jpg" alt="">
+</div>
+<div class="ab p-2">
+  <p>March 2011</p>
+<p>An Agency is Born</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+<img src="images/2.jpg" alt="">
+</div>
+<div class="ab p-3">
+  <p>December 2012</p>
+<p>Transition to Full Service</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+<img src="images/3.jpg" alt="">
+</div>
+
+<div class="ab p-4">
+  <p>July 2014</p>
+<p>Phase Two Expansion</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+<img src="images/4.jpg" alt="">
+</div>
+
+
+
+
+
+
+
+
+
+
+    </div>
 
     <script src="js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/slick/slick.min.js"></script>
-
     <script type="text/javascript" src="js/site.js"></script>
   </body>
 </html>
