--- a/index.html
+++ b/index.html
@@ -130,48 +130,70 @@
       </div>
     </div>
     <div class="about">
-<div class="ab-main">
-  <p class="main-1">ABOUT</p>
-  <p class="main-2">lorem ipsum dolor sit amet consectetur</p>
-</div>
-<div class="ab p-1">
-  <div class="ab-cont-1">
-    <p>2009-2011</p>
-    <p>Our Humble Beginnings</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-  </div>
+      <div class="about-parag">
+        <div class="about-parag-main">
+          <p class="about-parag-1">ABOUT</p>
+          <p class="about-parag-2">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+      </div>
 
-<img src="images/1.jpg" alt="">
-</div>
-<div class="ab p-2">
-  <p>March 2011</p>
-<p>An Agency is Born</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-<img src="images/2.jpg" alt="">
-</div>
-<div class="ab p-3">
-  <p>December 2012</p>
-<p>Transition to Full Service</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-<img src="images/3.jpg" alt="">
-</div>
+      <div class="timeline">
+        <div class="timeline-image">
+          <img class="t-image" src="images/1.jpg" alt="" />
+          <div class="timeline-left">
+            <p class="tp-1">2009-2011</p>
+            <p class="tp-2">Our Humble Beginnings</p>
+            <p class="tp-3">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
+              voluptatum eius sapiente, totam reiciendis temporibus qui
+              quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+              dolore laudantium consectetur!
+            </p>
+          </div>
+        </div>
 
-<div class="ab p-4">
-  <p>July 2014</p>
-<p>Phase Two Expansion</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-<img src="images/4.jpg" alt="">
-</div>
+        <div class="timeline-image">
+          <img class="t-image" src="images/2.jpg" alt="" />
+          <div class="timeline-right">
+            <p class="tp-1">March 2011</p>
+            <p class="tp-2">An Agency is Born</p>
+            <p class="tp-3">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
+              voluptatum eius sapiente, totam reiciendis temporibus qui
+              quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+              dolore laudantium consectetur!
+            </p>
+          </div>
+        </div>
 
+        <div class="timeline-image">
+          <img class="t-image" src="images/3.jpg" alt="" />
+          <div class="timeline-left">
+            <p class="tp-1">December 2012</p>
+            <p class="tp-2">Transition to Full Service</p>
+            <p class="tp-3">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
+              voluptatum eius sapiente, totam reiciendis temporibus qui
+              quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+              dolore laudantium consectetur!
+            </p>
+          </div>
+        </div>
 
-
-
-
-
-
-
-
-
+        <div class="timeline-image">
+          <img class="t-image" src="images/4.jpg" alt="" />
+          <div class="timeline-right">
+            <p class="tp-1">July 2014</p>
+            <p class="tp-2">Phase Two Expansion</p>
+            <p class="tp-3">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
+              voluptatum eius sapiente, totam reiciendis temporibus qui
+              quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+              dolore laudantium consectetur!
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="js/jquery.min.js"></script>
