team section added

--- a/index.html
+++ b/index.html
@@ -196,6 +196,56 @@
       </div>
     </div>
 
+    <div class="team">
+      <div class="team-parag">
+        <div class="team-parag-main">
+          <p class="team-parag-1">OUR TEAM</p>
+          <p class="team-parag-2">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+      </div>
+
+
+
+      <div class="team-content">
+      <div class="person">
+        <img src="images/team-1.jpg" alt="">
+        <div class="person-dsc">
+          <p class="p-name">Lorem Ipsum</p>
+          <p class="p-title">Lead Designer</p>
+        </div>
+        <div class="person-social">
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+      <div class="person">
+        <img src="images/team-2.jpg" alt="">
+        <div class="person-dsc">
+          <p class="p-name">Lorem Ipsum</p>
+          <p class="p-title">Lead Marketer</p>
+        </div>
+        <div class="person-social">
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+      <div class="person">
+        <img src="images/team-3.jpg" alt="">
+        <div class="person-dsc">
+          <p class="p-name">Lorem Ipsum</p>
+          <p class="p-title">Lead Developer</p>
+        </div>
+        <div class="person-social">
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+    </div>
+    </div>
+
     <script src="js/jquery.min.js"></script>
     <script type="text/javascript" src="assets/slick/slick.min.js"></script>
     <script type="text/javascript" src="js/site.js"></script>
